# zk-snark-ecdsa-benchmarks

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json
ec2-benchmarks/: README.md  deploy-and-benchmark.sh  generate_plots.py  generate_reports.py  quick-start.sh  requirements.txt  setup-check.sh
ec2-benchmarks/collected_results_20250708_190933/c7g_xlarge/: performance_data.json  performance_summary.md
ec2-benchmarks/collected_results_20250708_190933/c7i_2xlarge/: performance_data.json  performance_summary.md
ec2-benchmarks/scripts/: run-all-benchmarks.sh
ec2-benchmarks/terraform/: main.tf  terraform.tfvars.example  user_data.sh
gnark/: .dockerignore  Dockerfile  circuit.go  go.mod  go.sum  main.go
gnark/scripts/: benchmark-gas.sh  benchmark-performance.sh  compile-circuit.sh  generate-proofs.sh  run.sh  verify-proofs.sh
noir/: .dockerignore  Dockerfile  Nargo.toml
noir/scripts/: benchmark-gas.sh  compile-and-generate-witness.sh  generate-proofs.sh  install-deps.sh  run.sh  verify-proofs.sh
noir/src/: main.nr
rapidsnark/: Dockerfile  circuit.circom  download_gmp.sh  setup-dependencies.sh
rapidsnark/scripts/: benchmark-gas.sh  compile-circuit.sh  compute-witnesses.sh  generate-proofs.sh  run.sh  setup-dependencies.sh  trusted-setup.sh  verify-proofs.sh
scripts/: generateTestCases.ts  generate_test_cases.rs
snarkjs/: Dockerfile
snarkjs/scripts/: benchmark-gas.sh  compile-circuit.sh  compute-witnesses.sh  generate-proofs.sh  install-deps.sh  run.sh  setup-dependencies.sh  trusted-setup.sh  verify-proofs.sh
(+18 files in other folders)
