[package]
name = "test_data_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = "0.13.2"
sha2 = "0.10.8"
rand = "0.8.5"
num-bigint = "0.4.4"
num-traits = "0.2.17"
hex = "0.4.3"
clap = { version = "4.5.39", features = ["derive"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "generate_test_cases"
path = "scripts/generate_test_cases.rs"
